[gd_scene load_steps=2 format=3 uid="uid://b2evolution_popup"]

[ext_resource type="Script" path="res://Player/GUI/evolution_popup.gd" id="1_popup"]

[node name="EvolutionPopup" type="CanvasLayer"]
layer = 10
process_mode = 2
script = ExtResource("1_popup")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 15.0
offset_right = -20.0
offset_bottom = -15.0
theme_override_constants/separation = 12

[node name="TitleLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Weapon Ready to Evolve!"
horizontal_alignment = 1

[node name="WeaponIcon" type="TextureRect" parent="Panel/VBox"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 4
expand_mode = 1
stretch_mode = 5

[node name="OptionsContainer" type="HBoxContainer" parent="Panel/VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20
alignment = 1

[node name="ResourcesBar" type="HBoxContainer" parent="Panel/VBox"]
layout_mode = 2
alignment = 1

[node name="GoldLabel" type="Label" parent="Panel/VBox/ResourcesBar"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.85, 0.2, 1)
text = "0 Gold"

[node name="Separator" type="VSeparator" parent="Panel/VBox/ResourcesBar"]
layout_mode = 2

[node name="EssenceLabel" type="Label" parent="Panel/VBox/ResourcesBar"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.3, 1, 1)
text = "0 Essence"

[node name="CloseButton" type="Button" parent="Panel/VBox"]
layout_mode = 2
size_flags_horizontal = 4
text = "Not Now (Save Gold)"
